saved new changes

--- a/src/index.css
+++ b/src/index.css
@@ -173,6 +173,11 @@ img {
   z-index: 1200;
 }
 
+.text {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 500;
+}
 .Modal {
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
